@@ -1245,6 +1245,7 @@ AC_DEFUN([LC_PROG_LINUX],
           LC_CONFIG_QUOTA
           LC_CONFIG_HEALTH_CHECK_WRITE
           LC_CONFIG_LRU_RESIZE
+          LC_CONFIG_ADAPTIVE_TIMEOUTS
 
           LC_TASK_PPTR
           # RHEL4 patches
@@ -1407,6 +1408,18 @@ AC_ARG_ENABLE([lru_resize],
 AC_MSG_RESULT([$enable_lru_resize])
 if test x$enable_lru_resize != xno; then
    AC_DEFINE(HAVE_LRU_RESIZE_SUPPORT, 1, [Enable lru resize support])
+fi
+])
+
+AC_DEFUN([LC_CONFIG_ADAPTIVE_TIMEOUTS],
+[AC_MSG_CHECKING([whether to enable ptlrpc adaptive timeouts support])
+AC_ARG_ENABLE([adaptive_timeouts],
+	AC_HELP_STRING([--enable-adaptive-timeouts],
+			[enable ptlrpc adaptive timeouts support]),
+	[],[enable_adaptive_timeouts='no'])
+AC_MSG_RESULT([$enable_adaptive_timeouts])
+if test x$enable_adaptive_timeouts == xyes; then
+   AC_DEFINE(HAVE_AT_SUPPORT, 1, [Enable adaptive timeouts support])
 fi
 ])
 
