@@ -41,7 +41,13 @@ CFS_MODULE_PARM(test_req_buffer_pressure, "i", int, 0444,
 unsigned int at_min = 0;
 CFS_MODULE_PARM(at_min, "i", int, 0644,
                 "Adaptive timeout minimum (sec)");
+
+#if HAVE_AT_SUPPORT
 unsigned int at_max = 600;
+#else
+unsigned int at_max = 0;
+#endif
+
 EXPORT_SYMBOL(at_max);
 CFS_MODULE_PARM(at_max, "i", int, 0644,
                 "Adaptive timeout maximum (sec)");
