@@ -18,6 +18,10 @@ tbd  Sun Microsystems, Inc.
        * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
         removed cwd "./" (refer to Bugzilla 14399).
 
+Severity   : normal
+Bugzilla   : 3055
+Description: Disable adaptive timeouts by default
+
 Severity   : major
 Bugzilla   : 15027
 Frequency  : on network error
